[package]
name = "bevy_stage"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15" } # Явно добавим поддержку WebGPU

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
# Используем "*" или конкретную версию, которую требует ваша сборка
getrandom = { version = "0.3", features = ["wasm_js"] }